fix  line wrap in code #17

--- a/source/css/random.styl
+++ b/source/css/random.styl
@@ -569,8 +569,8 @@ figure.highlight
   td.gutter
     padding-right: 20px;
 
-figure.plain span.line
-  white-space: normal;
+  .line
+    white-space: pre-wrap;
 
 code
   font-family: codeFontFamily;
